// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.scp.coordinator.protos.keymanagement.shared.api.v1;

option java_package = "com.google.scp.coordinator.protos.keymanagement.shared.api.v1";
option java_outer_classname = "EncryptionKeyTypeProto";

/**
 * Type of encryption key and how it is split
 * Note: Consider backward compatibility on client side when new enum type is
 * added. Unsynchronized client would assign the default value for unknown enum
 * type.
 */
enum EncryptionKeyType {
  /** If the type is not assigned, UNSPECIFIED by default. */
  UNSPECIFIED = 0;
  /** Multi-coordinator using a Tink hybrid key, split using XOR with random
   * data */
  MULTI_PARTY_HYBRID_EVEN_KEYSPLIT = 1;
}
